// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Avatar Default 1`] = `
<div
  className="avatar"
  style={
    Object {
      "backgroundColor": "#c6ad05",
    }
  }
>
  J
  S
</div>
`;

exports[`Storyshots Atoms/Button Primary 1`] = `
<button
  className="button primary medium"
  onClick={[Function]}
  type="button"
>
  <p
    className="buttonText bold"
  >
    Click me
  </p>
</button>
`;

exports[`Storyshots Atoms/Button Secondary 1`] = `
<button
  className="button secondary medium"
  onClick={[Function]}
  type="button"
>
  <p
    className="buttonText bold"
  >
    Click me
  </p>
</button>
`;

exports[`Storyshots Atoms/Button Small 1`] = `
<button
  className="button primary small"
  onClick={[Function]}
  type="button"
>
  <p
    className="buttonText bold"
  >
    Click me
  </p>
</button>
`;

exports[`Storyshots Atoms/Icon Default 1`] = `
<div
  className="icon medium"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-coffee fa-w-20 "
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Atoms/Icon Large 1`] = `
<div
  className="icon large"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-coffee fa-w-20 "
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Atoms/Icon Small 1`] = `
<div
  className="icon small"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-coffee fa-w-20 "
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Atoms/Input Default 1`] = `
<div
  className="inputWrapper"
>
  <input
    className="input"
    onChange={[Function]}
    value="A test value"
  />
</div>
`;

exports[`Storyshots Atoms/Typography Body 1`] = `
<p
  className="body"
>
  Body Text
</p>
`;

exports[`Storyshots Atoms/Typography Button Text 1`] = `
<p
  className="buttonText bold"
>
  ButtonText Text
</p>
`;

exports[`Storyshots Atoms/Typography Header 1 1`] = `
<h1
  className="h1 bold"
>
  Header 1
</h1>
`;

exports[`Storyshots Atoms/Typography Header 2 1`] = `
<h2
  className="h2 bold"
>
  Header 2
</h2>
`;

exports[`Storyshots Atoms/Typography Header 3 1`] = `
<h3
  className="h3 bold"
>
  Header 3
</h3>
`;

exports[`Storyshots Atoms/Typography Header 4 1`] = `
<h4
  className="h4 bold"
>
  Header 4
</h4>
`;

exports[`Storyshots Atoms/Typography Label Text 1`] = `
<p
  className="labelText"
>
  LabelText Text
</p>
`;

exports[`Storyshots Atoms/Typography Small 1`] = `
<p
  className="small"
>
  Small Text
</p>
`;
